# JeDi

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
05-python_filter/: all_merged_names_filtered.vcf.gz.REMOVED.git-id
module_1/: Snakefile
module_1/06-genomic_diversity/: genomic_het_table.tsv
module_1/rules/: 00-samtools_index.smk  01-gstacks.smk  02-bcftools_call.smk  03-vcftools_filter.smk  04-bcftools_sort.smk  05-bcftools_merge.smk  06-python_filter.smk  07-piawka_het.smk
module_1/scripts/: 01-vcf_reheader.py  02-filter_singletons.py  03-genomic_piawka_het.py
module_2/: Snakefile
module_2/rules/: 07-piawka_het.smk  08-piawka_pi.smk
module_2/scripts/: 04-genomic_piawka_pi_dxy_fst.py
population_analysis/: Snakefile
population_analysis/rules/: 08_piawka_pi.smk
population_analysis/scripts/: 04_genomic_piawka_pi_dxy_fst.py
rules/: 00-samtools_index.smk
sample_analysis/: Snakefile
sample_analysis/rules/: 00_prepare_reference.smk  01_fasta2bed.smk  02_bcftools_call.smk  05_bcftools_merge.smk  06_python_filter.smk  07_piawka_het.smk
sample_analysis/scripts/: 01_fasta2bed.py  01_vcf_reheader.py  02_filter_singletons.py  03_genomic_piawka_het.py
tests/: conftest.py  test_fasta2bed.py  test_fasta2bed_comprehensive.py  test_filter_singletons.py  test_genomic_piawka_het.py  test_genomic_piawka_pi_dxy_fst.py  test_vcf_reheader.py
